--- a/src/app/components/carga/carga.component.html
+++ b/src/app/components/carga/carga.component.html
@@ -6,7 +6,7 @@
         <h3>Seleccione los archivo </h3>
 
 
-        <div appNgDropFiles (mouseSobre)="estaSobreElemento=$event" [ngClass]="{'file-over': estaSobreElemento}" class="well drop-zone">
+        <div appNgDropFiles [archivos]="archivos" (mouseSobre)="estaSobreElemento=$event" [ngClass]="{'file-over': estaSobreElemento}" class="well drop-zone">
             <h4>Deje caer aquí los archivos</h4>
             <img src="assets/drop-images.png">
 
