--- a/src/app/components/carga/carga.component.html
+++ b/src/app/components/carga/carga.component.html
@@ -20,7 +20,7 @@
         <h4>Cargar archivos</h4>
 
         <button (click)="cargarImagenes()" [disabled]="archivos.length ==0" class="btn btn-success">Cargar a firebase</button>
-        <button class="btn btn-danger">Limpiar</button>
+        <button (click)="limpiarArchivo()" class="btn btn-danger">Limpiar</button>
 
         <table class="table">
             <thead class="thead=dark">
@@ -33,12 +33,12 @@
 
             </thead>
             <tbody>
-                <tr>
-                    <td>XYZ</td>
-                    <td>12 MB</td>
+                <tr *ngFor="let archivo of archivos">
+                    <td>{{archivo.nombreArchivo}}</td>
+                    <td> {{archivo.archivo.size / 1024 /1024 | number: '.2-2'}} MB</td>
                     <td>
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" style="width: 25%"></div>
+                            <div class="progress-bar" role="progressbar" [ngStyle]="{'width': archivo.progreso + '%'}"></div>
                         </div>
                     </td>
                 </tr>
