--- a/src/app/components/fotos/fotos.component.html
+++ b/src/app/components/fotos/fotos.component.html
@@ -1,1 +1,8 @@
-<h2>fotos Work!</h2>
+<div class="card-columns">
+    <div class="card" *ngFor="let item of items | async">
+        <img [src]="item.url" class="card-img-top">
+        <div class="card-body">
+            <h5 class="card-title">{{item.nombre}}</h5>
+        </div>
+    </div>
+</div>
